<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>px4_pose</name>
  <version>1.0.0</version>
  <description>Publish PX4 drone position and add teleoperation</description>
  <maintainer email="amamanisai@unsa.edu.pe">Alfredo</maintainer>
  <license>GPL-3.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  
  <exec_depend>python3</exec_depend>
  <exec_depend>setuptools</exec_depend>
  <depend>rclpy</depend>
  <depend>rcutils</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>message_filters</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>px4_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2</depend>
  <depend>builtin_interfaces</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
